feat: added swags for controller
