# internal/application/dto/response_json.go
@@ -1,0 +1,10 @@
+package dto
+
+type SuccessResponse struct {
+	Message string `json:"message"`
+}
+
+type ErrorResponse struct {
+	Error bool   `json:"error"`
+	Msg   string `json:"msg"`
+}
